# Marlin

./: .gitignore  BuildAll.sh  README.md  conf.txt  patch.txt
code/: CMakeLists.txt  Cell.hpp  Config.cpp  Config.hpp  Decoder.cpp  Decoder.hpp  ElfMarlin.cpp  ElfMarlin.hpp  Executors.cpp  Executors.hpp  HazartUnit.cpp  HazartUnit.hpp  Log.cpp  Log.hpp  MMU.cpp  MMU.hpp  Main.cpp  Marlin.cpp  Marlin.hpp  Memory.cpp  Memory.hpp  Oper.cpp  Oper.hpp  Regfile.cpp  Regfile.hpp  StoreQueue.cpp  StoreQueue.hpp  elftrain.c
scripts/: install_requirements.sh
tests/binary_RV32/: base_arithmetic_test  base_cycle  division_by_zero  empty_test  hello_world  malloc_test  recursive_fibonacci  stack_test
tests/source/: base_arithmetic_test.c  base_cycle.c  division_by_zero.c  hello_world.c  malloc_test.c  recursive_fibonacci.c  stack_test.c
